--- a/src/scss/layouts/layout_768/_fashion2.scss
+++ b/src/scss/layouts/layout_768/_fashion2.scss
@@ -54,7 +54,7 @@
     display: inline-block;
     max-width: 275px;
     padding-top: rem(40px);
-    padding-left: rem(20px);
+    margin-left: rem(20px);
 }
 
 .fashion-figure__figcaption_text-ellipsis {
